current version; message generated automatically on: Linux nl6 (brandenb)

--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -126,17 +126,39 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 \begin{description}
 \item %YEAR
 2 times in 2025 \citep{
-BB24,
+2025ApJ...979L..39T,%Tschernitz+Bourdin "Granulation and Convectional Driving on Stellar Surfaces"
+2025JPlPh..91E..35H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
+2025CoFl..27313903Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
+2025arXiv250303332K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
+2025A&A...696A..93W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
+2025ApJ...983..105B,%Brandenburg+Scannapieco "Magnetically Assisted Vorticity Production in Decaying Acoustic Turbulence"
+2025arXiv250400738K,%Kapyla "Simulations of entropy rain-driven convection"
+2025arXiv250416849B,%Brandenburg "Magnetorotational instability in a solar mean-field dynamo"
+2025ApJ...984...78B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
+2025ApJ...984..113S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
+2025ApJ...985...18R,%Rogachevskii+ "Theory of the Kinetic Helicity Effect on Turbulent Diffusion of Magnetic and Scalar Fields"
+2025ApJ...984...88B,%Brandenburg+ "Helicity Effect on Turbulent Passive and Active Scalar Diffusivities"
+2025JCAP...05..079S,%Sharma+ "Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and black holes"
+2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
+2025arXiv250503660M,%Mondal+ "Understanding large-scale dynamos in unstratified rotating shear flows"
+2025arXiv250513305S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
+2025MNRAS.539.3421R,%Rice+ "Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs"
+2025MNRAS.540..532Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
+2025arXiv250601017H,%Hidalgo "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
+2025A&A...693A..89P,%Pandey+Bourdin "Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere"
+2025AAS...24540206M,%Meftah "Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks"
+2025PhRvD.111b3021P,%Park "Effect of turbulent kinetic helicity on diffusive beta effect for large scale dynamo"
+2025arXiv250105732R,%Roper Pol+Salvino Midiri "Relativistic magnetohydrodynamics in the early Universe"
+2025arXiv250112200B,%Brandenburg+Yi+Wu "Inverse cascade from helical and nonhelical decaying columnar magnetic fields"
 2025MNRAS.537L..26E,%Eriksson+ "Particle fragmentation inside planet-induced spiral waves"
+2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2025MNRAS.536.1625S%Shi+ "Kinetic field theory applied to planetesimal formation I: freely streaming dust particles"
 }, \item %YEAR
 46 times in 2024 \citep{
-2024arXiv241014497S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
-2024arXiv241217402B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
-2024arXiv241205086Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
+BB24,
+2024AGUFMSH13B2928M,%Maity+ "On the Evolution of Reconnection Flux in Erupting Magnetic Flux Ropes: Insights from Observations and MHD Simulation"
 2024arXiv241200641V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2024arXiv241112953Z,%Zhou+Lai "Understanding the UV/Optical Variability of AGNs through Quasi-Periodic Large-scale Magnetic Dynamos"
-2024arXiv241104854S,%Sharma+ "Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and black holes"
 2024PhFl...36k5152L,%Lipatnikov "A priori assessment of a simple approach to evaluating burning rate in large eddy simulations of premixed turbulent combustion"
 2024ApJ...975..251V,%Vemareddy "Simulating the formation and eruption of flux rope by magneto-friction model driven by time-dependent electric fields"
 2024A&A...691A.326H,%Hidalgo+ "Magnetohydrodynamic simulations of A-type stars: Long-term evolution of core dynamo cycles"
@@ -145,7 +167,6 @@ BB24,
 2024OJAp....7E..75D,%Dwivedi+ "Quasi-two-dimensionality of three-dimensional, magnetically dominated, decaying turbulence"
 2024ApJ...973...49K,%Kesri+ "Dependence of spicule properties on magnetic field -- results from Magnetohydrodynamics simulations"
 2024arXiv240914840K,%Kishore "Strengthening of the f mode due to subsurface magnetic fields in simulations of convection"
-2024arXiv240808819D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2024arXiv240416096D,%Dey+ "Spinning solar jets explained through the interplay between plasma sheets and vortex columns"
 2024arXiv240807668L,%Lipatnikov "Towards large eddy simulations of premixed turbulent flames without a combustion model}",
 2024SoPh..299..115V,%Vashishth "Hysteresis Near the Transition of the Large-Scale Dynamo in the Presence of the Small-Scale Dynamo"
@@ -154,8 +175,6 @@ BB24,
 2024ApJ...970L..19L,%Lyra+ "Rapid Protoplanet Formation in Vortices: Three-dimensional Local Simulations with Self-gravity"
 2024ApJ...977..128M,%Mtchedlidze+ "Intergalactic medium rotation measure of primordial magnetic fields"
 2024arXiv240611798B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
-2024arXiv240608967W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
-2024arXiv240517197Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
 2024ApJ...966...90S,%Sengupta+ "Length and Velocity Scales in Protoplanetary Disk Turbulence"
 2024JFM...979A..46S,%Saieed+Hickey "Viscosity-modulated clustering of heated bidispersed particles in a turbulent gas"
 2024PComI..4005315W,%Wang+ "Particle-resolved numerical simulations of char particle combustion in isotropic turbulence"
@@ -166,7 +185,6 @@ BB24,
 2024MNRAS.527.3018Z,%Zhou "Helical and non-helical large-scale dynamos in thin accretion discs"
 2024PhRvE.109a5206Z,%Zhou+Blackman "Helical dynamo growth and saturation at modest versus extreme magnetic Reynolds numbers"
 2024MNRAS.527.7994Q,%Qazi+ "Nonlinear magnetic buoyancy instability and turbulent dynamo"
-2024arXiv240101336H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
 2024arXiv240115860Z,%Zhou+Jingade "Correlation times of velocity and kinetic helicity fluctuations in nonhelical hydrodynamic turbulence"
 2024A&A...682A.156H,%Hackman+ "From convective stellar dynamo simulations to Zeeman-Doppler images"
 2024NatCo..15.1841K,%Kirchschlager+ "Supernova dust destruction in the magnetized turbulent ISM"
@@ -221,6 +239,7 @@ BB24,
 },\item
 \item %YEAR
 38 times in 2022 \citep{
+2024AGUFMSH13B2928M,%Maity+ "On the Evolution of Reconnection Flux in Erupting Magnetic Flux Ropes: Insights from Observations and MHD Simulation"
 2022NatPh..18..595D,%Dey+ "Polymeric jets throw light on the origin and nature of the forest of solar spicules"
 2022zndo...5807020C,%Chatterjee+Dey "Configuration files for simulations of the solar spicule forest"
 2022MNRAS.517..560B,%Becerra+ "Stability of axially symmetric magnetic fields in stars"
@@ -977,10 +996,12 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item % r e c o n  &  S S d y n
 {\em Small-scale dynamos and reconnection} \citep{
-2024arXiv240608967W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
+2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
+2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
+2025A&A...696A..93W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
 2024ApJ...961....7G,%Gent+ "Transition from small-scale to large-scale dynamo in a supernova-driven, multiphase medium"
 2024arXiv240115860Z,%Zhou+Jingade "Correlation times of velocity and kinetic helicity fluctuations in nonhelical hydrodynamic turbulence"
-2024arXiv241205086Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
+2025MNRAS.540..532Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
 2024MNRAS.527.7994Q,%Qazi+ "Nonlinear magnetic buoyancy instability and turbulent dynamo"
 2023Atmos..14..932B,%Brandenburg+Larsson "Turbulence with Magnetic Helicity That Is Absent on Average"
 2023NatAs...7..662W,%Warnecke "Numerical evidence for a small-scale dynamo approaching solar magnetic Prandtl numbers"
@@ -1015,9 +1036,9 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %p r i m o r d i a l,   d e c a y i n g,  c o s m o
 {\em Primordial magnetic fields and decaying turbulence} \citep{
+2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2024arXiv241200641V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2024arXiv240611798B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
-2024arXiv240808819D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2024OJAp....7E..75D,%Dwivedi+ "Quasi-two-dimensionality of three-dimensional, magnetically dominated, decaying turbulence"
 2024A&A...687A.186B,%Brandenburg+ "Resistively controlled primordial magnetic turbulence decay"
 2023arXiv230704602B,%Brandenburg "Inverse cascading for initial MHD turbulence spectra between Saffman and Batchelor"
@@ -1055,7 +1076,8 @@ The {\sc Pencil Code} has been used for the following research topics
 }.
 
 \item %GW & G W & g r a v i  w a v e s
-{\em Relic gravitational waves} \citep{
+{\em Relic gravitational waves \& axions} \citep{
+2025JCAP...05..079S,%Sharma+ "Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and black holes"
 2024PhRvD.109d3534B,%Brandenburg "Relic Gravitational Waves from the Chiral Plasma Instability in the Standard Cosmological Model"
 2024JCAP...12..057B,%Brandenburg+ "Magnetogenesis from axion-SU(2) inflation"
 2024JCAP...04..018I,%Iarygina "Backreaction of axion-SU(2) dynamics during inflation"
@@ -1088,6 +1110,7 @@ The {\sc Pencil Code} has been used for the following research topics
 %d u s t  &  p l a n e t & s t r e a m i n g & PLANERESIMAL
 \item
 {\em Planet formation} \citep{
+2025MNRAS.539.3421R,%Rice+ "Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs"
 2025MNRAS.537L..26E,%Eriksson+ "Particle fragmentation inside planet-induced spiral waves"
 2025MNRAS.536.1625S,%Shi+ "Kinetic field theory applied to planetesimal formation I: freely streaming dust particles"
 2022ApJ...933..100B,%Baehr+ "Direct Formation of Planetary Embryos in Self-Gravitating Disks"
@@ -1217,6 +1240,7 @@ The {\sc Pencil Code} has been used for the following research topics
 \begin{enumerate}
 \item %m r i
 {\em Accretion discs and shear flows} \citep{
+2025AAS...24540206M,%Meftah "Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks"
 2024ApJ...970L..19L,%Lyra+ "Rapid Protoplanet Formation in Vortices: Three-dimensional Local Simulations with Self-gravity"
 2024ApJ...966...90S,%Sengupta+ "Length and Velocity Scales in Protoplanetary Disk Turbulence"
 2024PSJ.....5...55C,%Canas+ "A Solution for the Density Dichotomy Problem of Kuiper Belt Objects with Multispecies Streaming Instability and Pebble Accretion"
@@ -1281,7 +1305,9 @@ The {\sc Pencil Code} has been used for the following research topics
 \begin{enumerate}
 \item % c o r
 {\em Coronal heating and coronal mass ejections} \citep{
-2024arXiv241014497S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
+2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
+2025arXiv250303332K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
+2025ApJ...984..113S,%Singh+Arunima "Reversals of toroidal magnetic field in local shearing box simulations of accretion disc with a hot corona"
 2024ApJ...975..251V,%Vemareddy "Simulating the formation and eruption of flux rope by magneto-friction model driven by time-dependent electric fields"
 2024ApJ...973...49K,%Kesri+ "Dependence of spicule properties on magnetic field -- results from Magnetohydrodynamics simulations"
 2024ApJ...962...86M,%Maity+ "Changes in Photospheric Lorentz Force in Eruptive and Confined Solar Flares"
@@ -1336,8 +1362,14 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %h e l
 {\em Large-scale dynamos, helical turbulence, and catastrophic quenching} \citep{
+2025arXiv250416849B,%Brandenburg "Magnetorotational instability in a solar mean-field dynamo"
+2025ApJ...984...78B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
+2025ApJ...985...18R,%Rogachevskii+ "Theory of the Kinetic Helicity Effect on Turbulent Diffusion of Magnetic and Scalar Fields"
+2025ApJ...984...88B,%Brandenburg+ "Helicity Effect on Turbulent Passive and Active Scalar Diffusivities"
+2025arXiv250503660M,%Mondal+ "Understanding large-scale dynamos in unstratified rotating shear flows"
+2025arXiv250513305S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
+2025arXiv250601017H,%Hidalgo "Shaping core dynamos in A-type stars: The role of dipolar fossil fields"
 2024arXiv241112953Z,%Zhou+Lai "Understanding the UV/Optical Variability of AGNs through Quasi-Periodic Large-scale Magnetic Dynamos"
-2024arXiv241217402B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
 2024SoPh..299..115V,%Vashishth "Hysteresis Near the Transition of the Large-Scale Dynamo in the Presence of the Small-Scale Dynamo"
 2024PhRvE.109a5206Z,%Zhou+Blackman "Helical dynamo growth and saturation at modest versus extreme magnetic Reynolds numbers"
 2023arXiv230705490Z,%Zhu+Shi "Helical and nonhelical (magneto-)Burgers turbulence: I. Compressibility reduction and beyond"
@@ -1495,11 +1527,14 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %c o n v e c t i o n
 {\em Convection in Cartesian domains} \citep{
-2024arXiv240101336H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
+2025arXiv250400738K,%Kapyla "Simulations of entropy rain-driven convection"
+2025A&A...693A..89P,%Pandey+Bourdin "Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere"
+2025JPlPh..91E..35H,%Hosking+ "Metastability of stratified magnetohydrostatic equilibria and their relaxation"
 2024A&A...683A.221K,%K{\"a}pyl{\"a}} "Convective scale and subadiabatic layers in simulations of rotating compressible convection"
 2023arXiv231109082K,%Kapyla "Effects of rotation and surface forcing on deep stellar convection zones"
 2023A&A...678A..82O,%Ortiz-Rodriguez+ "Simulations of dynamo action in slowly rotating M dwarfs: Dependence on dimensionless parameters"
 2022cosp...44.2553T,%Tschernitz+Bourdin "Influence of the kinematic viscosity on solar convection simulations"
+2025ApJ...979L..39T,%Tschernitz+Bourdin "Granulation and Convectional Driving on Stellar Surfaces"
 2022arXiv220606566M,%Masada+Sano "Rotational Dependence of Large-scale Dynamo in Strongly-stratified Convection: What Causes It?"
 2022BAAA...63...62O,%Ortiz-Rodriguez+ "Simulations of fully convective M dwarfs: dynamo action with varying magnetic Prandtl numbers"
 2022ApJ...931L..17K,%Kapyla+ "Solar-like dynamos and rotational scaling of cycles from star-in-a-box simulations"
@@ -1682,6 +1717,10 @@ Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
 %h y d r o
 \item
 {\em Hydrodynamic and MHD turbulence} \citep{
+2025ApJ...983..105B,%Brandenburg+Scannapieco "Magnetically Assisted Vorticity Production in Decaying Acoustic Turbulence"
+2025PhRvD.111b3021P,%Park "Effect of turbulent kinetic helicity on diffusive beta effect for large scale dynamo"
+2025arXiv250105732R,%Roper Pol+Salvino Midiri "Relativistic magnetohydrodynamics in the early Universe"
+2025arXiv250112200B,%Brandenburg+Yi+Wu "Inverse cascade from helical and nonhelical decaying columnar magnetic fields"
 2023MNRAS.518.3312B,%Brandenburg+ "Batchelor, Saffman, and Kazantsev spectra in galactic small-scale dynamos"
 2020ApJ...892...80B,%Brandenburg+Boldyrev "The Turbulent Stress Spectrum in the Inertial and Subinertial Ranges"
 2017JFM...824..785A,% Aiyer+Subramanian "Passive scalar mixing and decay at finite correlation times in the Batchelor regime"
@@ -1699,7 +1738,7 @@ Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
 %c o m b
 \item
 {\em Turbulent combustion, front propagation, radiation \& ionization} \citep{
-2024arXiv240517197Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
+2025CoFl..27313903Y,%Yuvraj+ "How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames"
 2024arXiv240807668L,%Lipatnikov "Towards large eddy simulations of premixed turbulent flames without a combustion model}",
 2024PComI..4005315W,%Wang+ "Particle-resolved numerical simulations of char particle combustion in isotropic turbulence"
 2023PhFl...35g5150G,%Ganti+ "Interactions between high hydrogen content syngas-air premixed flames and homogeneous isotropic turbulence: Flame thickening"
@@ -1746,15 +1785,19 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle"
 The {\sc Pencil Code} has been quoted in other papers either for
 detailed code comparison, in connection with related work,
 or in comparison with other codes \citep{
+2025arXiv250319131I,%Irshad "Turbulent dynamos in a collapsing cloud"
+2025ApJS..277...46S,%Son+ "A Comparative Analysis of High-resolution Shock-capturing Schemes for Two-dimensional Magnetohydrodynamic Simulation of Flux Emergence in the Solar Atmosphere"
+2025JApA...46...28S,%Sharma+ "Computational astrophysics, data science and AI/ML in astronomy: A perspective from Indian community"
+2025CoPhC.30609364Y,%Yeung "GPU-enabled extreme-scale turbulence simulations: Fourier pseudo-spectral algorithms at the exascale using OpenMP offloading"
 2025arXiv250103876S,%Sharma+ "Computational Astrophysics, Data Science \& AI/ML in Astronomy: A Perspective from Indian Community"
-2024arXiv241017319L,%Lim+ "Probing Conditions for Strong Clumping by the Streaming Instability: Small Dust Grains and Low Dust-to-gas Density Ratio"
+2025ApJ...978...72Z,%Zhou+ "Frozen-field Modeling of Coronal Condensations with MPI-AMRVAC II: Optimization and application in three-dimensional models"
+2025ApJ...981..160L,%Lim+ "Probing Conditions for Strong Clumping by the Streaming Instability: Small Dust Grains and Low Dust-to-gas Density Ratio"
 2024arXiv241021568S,%Schad+ "Mapping the Sun's coronal magnetic field using the Zeeman effect"
 2024MNRAS.534.3761A,%Achikanath+ "AHKASH: a new Hybrid particle-in-cell code for simulations of astrophysical collisionless plasma"
 2024ApJ...977..191R,%Raboonik+ "Exact Nonlinear Decomposition of Ideal-MHD Waves Using Eigenenergies. II. Fully Analytical Equations and Pseudoadvective Eigenenergies"
 2024RPPh...87i4901F,%Figueroa+ "Present and future of osmo attice"
 2024ApJ...972..128R,%Rea+ "Magnetically Driven Turbulence in the Inner Regions of Protoplanetary Disks"
 2024ApJS..273...37S,%Shariff "PAD{\'E}: A Code for Protoplanetary Disk Turbulence Based on Pad{\'e} Differencing"
-2024arXiv241116415Z,%Zhou+ "Frozen-field Modeling of Coronal Condensations with MPI-AMRVAC II: Optimization and application in three-dimensional models"
 2024arXiv240718587S,%Sandnes+ "REMIX SPH -- improving mixing in smoothed particle hydrodynamics simulations using a generalised, material-independent approach"
 2024arXiv240705826D,%Dahl+ "Primordial acoustic turbulence: three-dimensional simulations and gravitational wave predictions"
 2024arXiv240600467H,%Hunana "Generalized Fluid Models of the Braginskii Type. Part 2. The Boltzmann Operator"
