--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -15989,7 +15989,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2024PhFl...36k5152L,
        author = {{Lipatnikov}, Andrei N.},
         title = "{A priori assessment of a simple approach to evaluating burning rate in large eddy simulations of premixed turbulent combustion}",
-      journal = {Physics of Fluids},
+      journal = {Phys. Fluids},
      keywords = {Turbulent Flows, Physics - Fluid Dynamics},
          year = 2024,
         month = nov,
@@ -16213,3 +16213,580 @@ archivePrefix = {arXiv},
   year={2019},
   url={https://api.semanticscholar.org/CorpusID:119012363}
 }
+
+@ARTICLE{2025A&A...694A..39D,
+       author = {{Dehman}, Clara and {Brandenburg}, Axel},
+        title = "{Reality of inverse cascading in neutron star crusts}",
+      journal = {\aap},
+     keywords = {magnetic fields, stars: evolution, stars: interiors, stars: magnetars, stars: magnetic field, stars: neutron, Astrophysics - High Energy Astrophysical Phenomena, Physics - Plasma Physics},
+         year = 2025,
+        month = feb,
+       volume = {694},
+          eid = {A39},
+        pages = {A39},
+          doi = {10.1051/0004-6361/202451904},
+archivePrefix = {arXiv},
+       eprint = {2408.08819},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...694A..39D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250112200B,
+       author = {{Brandenburg}, Axel and {Yi}, Longqing and {Wu}, Xianshu},
+        title = "{Inverse cascade from helical and nonhelical decaying columnar magnetic fields}",
+      journal = {arXiv e-prints},
+     keywords = {Physics - Plasma Physics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = jan,
+          eid = {arXiv:2501.12200},
+        pages = {arXiv:2501.12200},
+          doi = {10.48550/arXiv.2501.12200},
+archivePrefix = {arXiv},
+       eprint = {2501.12200},
+ primaryClass = {physics.plasm-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250112200B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250105732R,
+       author = {{Roper Pol}, Alberto and {Salvino Midiri}, Antonino},
+        title = "{Relativistic magnetohydrodynamics in the early Universe}",
+      journal = {arXiv e-prints},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = jan,
+          eid = {arXiv:2501.05732},
+        pages = {arXiv:2501.05732},
+          doi = {10.48550/arXiv.2501.05732},
+archivePrefix = {arXiv},
+       eprint = {2501.05732},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250105732R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025PhRvD.111b3021P,
+       author = {{Park}, Kiwan},
+        title = "{Effect of turbulent kinetic helicity on diffusive <inline-formula><mml:math display=``inline''><mml:mi>{\ensuremath{\beta}}</mml:mi></mml:math></inline-formula> effect for large scale dynamo}",
+      journal = {\prd},
+     keywords = {Astrophysics and astroparticle physics},
+         year = 2025,
+        month = jan,
+       volume = {111},
+       number = {2},
+          eid = {023021},
+        pages = {023021},
+          doi = {10.1103/PhysRevD.111.023021},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025PhRvD.111b3021P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025CoPhC.30609364Y,
+       author = {{Yeung}, P.~K. and {Ravikumar}, Kiran and {Nichols}, Stephen and {Uma-Vaideswaran}, Rohini},
+        title = "{GPU-enabled extreme-scale turbulence simulations: Fourier pseudo-spectral algorithms at the exascale using OpenMP offloading}",
+      journal = {Computer Physics Communications},
+     keywords = {Exascale, Turbulence, Direct numerical simulations, OpenMP offloading, 3D fast Fourier transform, GPU-aware MPI},
+         year = 2025,
+        month = jan,
+       volume = {306},
+          eid = {109364},
+        pages = {109364},
+          doi = {10.1016/j.cpc.2024.109364},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025CoPhC.30609364Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...978...72Z,
+       author = {{Zhou}, Yuhao and {Li}, Xiaohong and {Jenkins}, Jack M. and {Hong}, Jie and {Keppens}, Rony},
+        title = "{Frozen-field Modeling of Coronal Condensations with MPI-AMRVAC. II. Optimization and Application in 3D Models}",
+      journal = {\apj},
+     keywords = {Solar physics, Solar atmosphere, Solar prominences, Magnetohydrodynamical simulations, 1476, 1477, 1519, 1966, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2025,
+        month = jan,
+       volume = {978},
+       number = {1},
+          eid = {72},
+        pages = {72},
+          doi = {10.3847/1538-4357/ad96af},
+archivePrefix = {arXiv},
+       eprint = {2411.16415},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...978...72Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2025AAS...24540206M,
+       author = {{Meftah}, John},
+        title = "{Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks}",
+    booktitle = {American Astronomical Society Meeting Abstracts},
+         year = 2025,
+       series = {American Astronomical Society Meeting Abstracts},
+       volume = {245},
+        month = jan,
+          eid = {402.06},
+        pages = {402.06},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025AAS...24540206M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...693A..89P,
+       author = {{Pandey}, Vartika and {Bourdin}, Philippe-A.},
+        title = "{Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere}",
+      journal = {\aap},
+     keywords = {hydrodynamics, methods: numerical, Sun: corona, stars: atmospheres},
+         year = 2025,
+        month = jan,
+       volume = {693},
+          eid = {A89},
+        pages = {A89},
+          doi = {10.1051/0004-6361/202450170},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...693A..89P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2024AGUFMSH13B2928M,
+       author = {{Maity}, Samriddhi Sankar and {Chatterjee}, Piyali and {Sarkar}, Ranadeep and {Mytheen}, Ijas},
+        title = "{On the Evolution of Reconnection Flux in Erupting Magnetic Flux Ropes: Insights from Observations and MHD Simulation}",
+    booktitle = {AGU Fall Meeting Abstracts},
+         year = 2024,
+       series = {AGU Fall Meeting Abstracts},
+       volume = {2024},
+        month = dec,
+          eid = {SH13B-2928},
+        pages = {SH13B-2928},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024AGUFMSH13B2928M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250601017H,
+       author = {{Hidalgo}, J.~P. and {K{\"a}pyl{\"a}}, P.~J. and {Schleicher}, D.~R. G and {Ortiz-Rodr{\'\i}guez}, C.~A. and {Navarrete}, F.~H.},
+        title = "{Shaping core dynamos in A-type stars: The role of dipolar fossil fields}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = jun,
+          eid = {arXiv:2506.01017},
+        pages = {arXiv:2506.01017},
+          doi = {10.48550/arXiv.2506.01017},
+archivePrefix = {arXiv},
+       eprint = {2506.01017},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250601017H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025MNRAS.540..532Q,
+       author = {{Qazi}, Yasin and {Shukurov}, A. and {Tharakkal}, D. and {Gent}, F.~A. and {Bendre}, A.~B.},
+        title = "{Non-linear magnetic buoyancy instability and galactic dynamos}",
+      journal = {\mnras},
+     keywords = {dynamo, instabilities, magnetic fields, MHD, ISM: structure, galaxies: magnetic fields, Astrophysics of Galaxies},
+         year = 2025,
+        month = jun,
+       volume = {540},
+       number = {1},
+        pages = {532-544},
+          doi = {10.1093/mnras/staf766},
+archivePrefix = {arXiv},
+       eprint = {2412.05086},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.540..532Q},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025MNRAS.539.3421R,
+       author = {{Rice}, Ken and {Baehr}, Hans and {Young}, Alison K. and {Booth}, Richard and {Rowther}, Sahl and {Meru}, Farzana and {Hall}, Cassandra and {Koval}, Adam},
+        title = "{Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs}",
+      journal = {\mnras},
+     keywords = {planets and satellites: formation, planets and satellites: gaseous planets, protoplanetary discs {\textendash} stars: formation {\textendash} stars: protostars {\textendash} instabilities, Earth and Planetary Astrophysics},
+         year = 2025,
+        month = jun,
+       volume = {539},
+       number = {4},
+        pages = {3421-3435},
+          doi = {10.1093/mnras/staf714},
+archivePrefix = {arXiv},
+       eprint = {2505.00363},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.539.3421R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250513305S,
+       author = {{Shchutskyi}, Nikyta and {Schaller}, Matthieu and {Karapiperis}, Orestis A. and {Stasyszyn}, Federico A. and {Brandenburg}, Axel},
+        title = "{Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics, Computational Physics},
+         year = 2025,
+        month = may,
+          eid = {arXiv:2505.13305},
+        pages = {arXiv:2505.13305},
+          doi = {10.48550/arXiv.2505.13305},
+archivePrefix = {arXiv},
+       eprint = {2505.13305},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250513305S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250503660M,
+       author = {{Mondal}, Tushar and {Bhat}, Pallavi and {Ebrahimi}, Fatima and {Blackman}, Eric G.},
+        title = "{Understanding large-scale dynamos in unstratified rotating shear flows}",
+      journal = {arXiv e-prints},
+     keywords = {Plasma Physics, Astrophysics of Galaxies, High Energy Astrophysical Phenomena, Solar and Stellar Astrophysics, Fluid Dynamics},
+         year = 2025,
+        month = may,
+          eid = {arXiv:2505.03660},
+        pages = {arXiv:2505.03660},
+          doi = {10.48550/arXiv.2505.03660},
+archivePrefix = {arXiv},
+       eprint = {2505.03660},
+ primaryClass = {physics.plasm-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250503660M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250502885B,
+       author = {{Brandenburg}, Axel and {Ntormousi}, Evangelia},
+        title = "{Magnetic field amplification during a turbulent collapse}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies, Fluid Dynamics},
+         year = 2025,
+        month = may,
+          eid = {arXiv:2505.02885},
+        pages = {arXiv:2505.02885},
+          doi = {10.48550/arXiv.2505.02885},
+archivePrefix = {arXiv},
+       eprint = {2505.02885},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250502885B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025JCAP...05..079S,
+       author = {{Sharma}, Ramkishor and {Brandenburg}, Axel and {Subramanian}, Kandaswamy and {Vikman}, Alexander},
+        title = "{Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and scalar statistics}",
+      journal = {\jcap},
+     keywords = {inflation, physics of the early universe, primordial black holes, primordial magnetic fields, Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2025,
+        month = may,
+       volume = {2025},
+       number = {5},
+          eid = {079},
+        pages = {079},
+          doi = {10.1088/1475-7516/2025/05/079},
+archivePrefix = {arXiv},
+       eprint = {2411.04854},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025JCAP...05..079S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025JApA...46...28S,
+       author = {{Sharma}, Prateek and {Vaidya}, Bhargav and {Wadadekar}, Yogesh and {Bagla}, Jasjeet and {Chatterjee}, Piyali and {Hanasoge}, Shravan and {Kumar}, Prayush and {Mukherjee}, Dipanjan and {Philip}, Ninan Sajeeth and {Singh}, Nishant},
+        title = "{Computational astrophysics, data science and AI/ML in astronomy: A perspective from Indian community}",
+      journal = {Journal of Astrophysics and Astronomy},
+     keywords = {High performance computing, AI/ML in astronomy, Indian astronomy, Information and Computing Sciences, Artificial Intelligence and Image Processing, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2025,
+        month = may,
+       volume = {46},
+       number = {1},
+          eid = {28},
+        pages = {28},
+          doi = {10.1007/s12036-025-10049-9},
+archivePrefix = {arXiv},
+       eprint = {2501.03876},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025JApA...46...28S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...985...18R,
+       author = {{Rogachevskii}, Igor and {Kleeorin}, Nathan and {Brandenburg}, Axel},
+        title = "{Theory of the Kinetic Helicity Effect on Turbulent Diffusion of Magnetic and Scalar Fields}",
+      journal = {\apj},
+     keywords = {Cosmic magnetic fields theory, 321, Fluid Dynamics, Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = may,
+       volume = {985},
+       number = {1},
+          eid = {18},
+        pages = {18},
+          doi = {10.3847/1538-4357/adcec0},
+archivePrefix = {arXiv},
+       eprint = {2501.13807},
+ primaryClass = {physics.flu-dyn},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...985...18R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...984...88B,
+       author = {{Brandenburg}, Axel and {K{\"a}pyl{\"a}}, Petri J. and {Rogachevskii}, Igor and {Yokoi}, Nobumitsu},
+        title = "{Helicity Effect on Turbulent Passive and Active Scalar Diffusivities}",
+      journal = {\apj},
+     keywords = {Magnetic fields, Hydrodynamics, 994, 1963, Fluid Dynamics, Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = may,
+       volume = {984},
+       number = {1},
+          eid = {88},
+        pages = {88},
+          doi = {10.3847/1538-4357/adc691},
+archivePrefix = {arXiv},
+       eprint = {2501.08879},
+ primaryClass = {physics.flu-dyn},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...984...88B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...984..113S,
+       author = {{Singh}, Nishant K. and {Ajay}, Arunima and {Rajesh}, S.~R.},
+        title = "{Reversals of Toroidal Magnetic Field in Local Shearing Box Simulations of Accretion Disk with a Hot Corona}",
+      journal = {\apj},
+     keywords = {Stellar accretion disks, Magnetic fields, Compact objects, 1579, 994, 288, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = may,
+       volume = {984},
+       number = {2},
+          eid = {113},
+        pages = {113},
+          doi = {10.3847/1538-4357/adbf02},
+archivePrefix = {arXiv},
+       eprint = {2410.14497},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...984..113S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...984...78B,
+       author = {{Brandenburg}, Axel and {Vishniac}, Ethan T.},
+        title = "{Magnetic Helicity Fluxes in Dynamos from Rotating Inhomogeneous Turbulence}",
+      journal = {\apj},
+     keywords = {Astrophysical magnetism, 102, Plasma Physics, Astrophysics of Galaxies, Solar and Stellar Astrophysics, Fluid Dynamics},
+         year = 2025,
+        month = may,
+       volume = {984},
+       number = {1},
+          eid = {78},
+        pages = {78},
+          doi = {10.3847/1538-4357/adc561},
+archivePrefix = {arXiv},
+       eprint = {2412.17402},
+ primaryClass = {physics.plasm-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...984...78B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250416849B,
+       author = {{Brandenburg}, Axel and {Larsson}, Gustav and {Del Sordo}, Fabio and {K{\"a}pyl{\"a}}, Petri J.},
+        title = "{Magnetorotational instability in a solar mean-field dynamo}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = apr,
+          eid = {arXiv:2504.16849},
+        pages = {arXiv:2504.16849},
+          doi = {10.48550/arXiv.2504.16849},
+archivePrefix = {arXiv},
+       eprint = {2504.16849},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250416849B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250400738K,
+       author = {{K{\"a}pyl{\"a}}, P.~J.},
+        title = "{Simulations of entropy rain-driven convection}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics, Fluid Dynamics},
+         year = 2025,
+        month = apr,
+          eid = {arXiv:2504.00738},
+        pages = {arXiv:2504.00738},
+          doi = {10.48550/arXiv.2504.00738},
+archivePrefix = {arXiv},
+       eprint = {2504.00738},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250400738K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJS..277...46S,
+       author = {{Son}, Donghui and {Jang}, Yeonwoo and {Magara}, Tetsuya},
+        title = "{A Comparative Analysis of High-resolution Shock-capturing Schemes for Two-dimensional Magnetohydrodynamic Simulation of Flux Emergence in the Solar Atmosphere}",
+      journal = {\apjs},
+     keywords = {Solar magnetic fields, Solar physics, Magnetohydrodynamics, Magnetohydrodynamical simulations, 1503, 1476, 1964, 1966},
+         year = 2025,
+        month = apr,
+       volume = {277},
+       number = {2},
+          eid = {46},
+        pages = {46},
+          doi = {10.3847/1538-4365/adb617},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJS..277...46S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...983..105B,
+       author = {{Brandenburg}, Axel and {Scannapieco}, Evan},
+        title = "{Magnetically Assisted Vorticity Production in Decaying Acoustic Turbulence}",
+      journal = {\apj},
+     keywords = {Magnetic fields, 994, Fluid Dynamics, Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = apr,
+       volume = {983},
+       number = {2},
+          eid = {105},
+        pages = {105},
+          doi = {10.3847/1538-4357/adbe38},
+archivePrefix = {arXiv},
+       eprint = {2501.18525},
+ primaryClass = {physics.flu-dyn},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...983..105B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...696A..93W,
+       author = {{Warnecke}, J. and {Korpi-Lagg}, M.~J. and {Rheinhardt}, M. and {Viviani}, M. and {Prabhu}, A.},
+        title = "{Small-scale and large-scale dynamos in global convection simulations of solar-like stars}",
+      journal = {\aap},
+     keywords = {dynamo, magnetic fields, magnetohydrodynamics (MHD), turbulence, Sun: magnetic fields, stars: activity, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = apr,
+       volume = {696},
+          eid = {A93},
+        pages = {A93},
+          doi = {10.1051/0004-6361/202451085},
+archivePrefix = {arXiv},
+       eprint = {2406.08967},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...696A..93W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250319131I,
+       author = {{Irshad P}, Muhammed and {Bhat}, Pallavi and {Subramanian}, Kandaswamy and {Shukurov}, Anvar},
+        title = "{Turbulent dynamos in a collapsing cloud}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies, Cosmology and Nongalactic Astrophysics, Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = mar,
+          eid = {arXiv:2503.19131},
+        pages = {arXiv:2503.19131},
+          doi = {10.48550/arXiv.2503.19131},
+archivePrefix = {arXiv},
+       eprint = {2503.19131},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250319131I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250303332K,
+       author = {{Kishore}, G. and {Singh}, Nishant K.},
+        title = "{The spectra of solar magnetic energy and helicity}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics},
+         year = 2025,
+        month = mar,
+          eid = {arXiv:2503.03332},
+        pages = {arXiv:2503.03332},
+          doi = {10.48550/arXiv.2503.03332},
+archivePrefix = {arXiv},
+       eprint = {2503.03332},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250303332K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025CoFl..27313903Y,
+       author = {{Yuvraj} and {Im}, Hong G. and {Chaudhuri}, Swetaprovo},
+        title = "{How ``mixing'' affects propagation and structure of intensely turbulent, lean, hydrogen-air premixed flames}",
+      journal = {Combustion and Flame},
+     keywords = {Flame displacement speed, Turbulent premixed flames, Lean hydrogen flames, Flame{\textendash}flame interaction, Physics - Fluid Dynamics},
+         year = 2025,
+        month = mar,
+       volume = {273},
+          eid = {113903},
+        pages = {113903},
+          doi = {10.1016/j.combustflame.2024.113903},
+archivePrefix = {arXiv},
+       eprint = {2405.17197},
+ primaryClass = {physics.flu-dyn},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025CoFl..27313903Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...981..160L,
+       author = {{Lim}, Jeonghoon and {Simon}, Jacob B. and {Li}, Rixin and {Carrera}, Daniel and {Baronett}, Stanley A. and {Youdin}, Andrew N. and {Lyra}, Wladimir and {Yang}, Chao-Chin},
+        title = "{Probing Conditions for Strong Clumping by the Streaming Instability: Small Dust Grains and Low Dust-to-gas Density Ratio}",
+      journal = {\apj},
+     keywords = {Planet formation, Protoplanetary disks, Planetesimals, Gas-to-dust ratio, Hydrodynamics, 1241, 1300, 1259, 638, 1963, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2025,
+        month = mar,
+       volume = {981},
+       number = {2},
+          eid = {160},
+        pages = {160},
+          doi = {10.3847/1538-4357/adb311},
+archivePrefix = {arXiv},
+       eprint = {2410.17319},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...981..160L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250217178K,
+       author = {{Kishore}, G. and {Singh}, Nishant K.},
+        title = "{Rotational effects on the small-scale dynamo}",
+      journal = {arXiv e-prints},
+     keywords = {Physics - Fluid Dynamics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2025,
+        month = feb,
+          eid = {arXiv:2502.17178},
+        pages = {arXiv:2502.17178},
+          doi = {10.48550/arXiv.2502.17178},
+archivePrefix = {arXiv},
+       eprint = {2502.17178},
+ primaryClass = {physics.flu-dyn},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250217178K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025JPlPh..91E..35H,
+       author = {{Hosking}, D.~N. and {Wasserman}, D. and {Cowley}, S.~C.},
+        title = "{Metastability of stratified magnetohydrostatic equilibria and their relaxation}",
+      journal = {Journal of Plasma Physics},
+     keywords = {plasma nonlinear phenomena, plasma instabilities, Astrophysics - High Energy Astrophysical Phenomena, Physics - Fluid Dynamics, Physics - Plasma Physics},
+         year = 2025,
+        month = feb,
+       volume = {91},
+       number = {1},
+          eid = {E35},
+        pages = {E35},
+          doi = {10.1017/S0022377824001521},
+archivePrefix = {arXiv},
+       eprint = {2401.01336},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025JPlPh..91E..35H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...979L..39T,
+       author = {{Tschernitz}, Johannes and {Bourdin}, Philippe-A.},
+        title = "{Granulation and Convectional Driving on Stellar Surfaces}",
+      journal = {\apjl},
+     keywords = {Solar granulation, Stellar granulation, Solar radiation, Solar convective zone, Stellar convection envelopes, 1498, 2102, 1521, 1998, 299, Astrophysics - Solar and Stellar Astrophysics, Physics - Plasma Physics},
+         year = 2025,
+        month = feb,
+       volume = {979},
+       number = {2},
+          eid = {L39},
+        pages = {L39},
+          doi = {10.3847/2041-8213/adac4f},
+archivePrefix = {arXiv},
+       eprint = {2502.02350},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...979L..39T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
